syntax = "proto3";

package com.android.designcompose;


message ViewStyleSTUB {

}

/* Originally from crates/figma_import/src/toolkit_schema.rs
The final result of a layout algorithm for a single taffy Node
*/
message Layout {
  // Relative ordering of the node. Render nodes with a higher order on top
  // of nodes with lower orde
  uint32 order = 1;
  float width = 2;
  float height = 3;
  float left = 4;  // The top-left corner of the node
  float top = 5;
}

/* Originally from crates/figma_import/src/layout.rs
The layout response sent back to client which contains a layout state ID and
a list of layout IDs that have changed.
*/
message LayoutChangedResponse {
  int32 layout_state = 1;
  map<int32, Layout> changed_layouts = 2;
}

// A representation of a Figma node to register for layout.
message LayoutNode {
  int32 layout_id = 1;
  int32 parent_layout_id = 2;
  int32 child_index = 3;
  ViewStyleSTUB style = 4;
  string name = 5;
  bool use_measure_func = 6;
  optional int32 fixed_width = 7;
  optional int32 fixed_height = 8;
}

// A parent node id and a list of child ids
message LayoutParentChildren {
  int32 parent_layout_id = 1;
  repeated int32 child_layout_ids = 2;
}

// A list of Figma nodes to register for layout
message LayoutNodeList {
  repeated LayoutNode layout_nodes = 1;
  repeated LayoutParentChildren parent_children = 2;
}
